FEATURE-001 NetWorkThrottlingIndex 제외하고 완료